--- a/TicTacToeMachineLearning.vcxproj
+++ b/TicTacToeMachineLearning.vcxproj
@@ -18,6 +18,21 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Genetic.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\NeuralNet.cpp" />
+    <ClCompile Include="src\Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Genetic.h" />
+    <ClInclude Include="include\main.h" />
+    <ClInclude Include="include\NeuralNet.h" />
+    <ClInclude Include="include\Player.h" />
+    <ClInclude Include="include\Population.h" />
+    <ClInclude Include="include\TicTacToe.h" />
+    <ClInclude Include="include\UltimateTTT.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{AE943583-6E21-47EC-BFC2-F37CA248C5A9}</ProjectGuid>
@@ -77,6 +92,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -100,23 +116,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Genetic.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Matrix.cpp" />
-    <ClCompile Include="NeuralNet.cpp" />
-    <ClCompile Include="Player.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Genetic.h" />
-    <ClInclude Include="main.h" />
-    <ClInclude Include="Matrix.h" />
-    <ClInclude Include="NeuralNet.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Population.h" />
-    <ClInclude Include="TicTacToe.h" />
-    <ClInclude Include="UltimateTTT.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
