--- a/TicTacToeMachineLearning.vcxproj.filters
+++ b/TicTacToeMachineLearning.vcxproj.filters
@@ -51,4 +51,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="Eigen_visualizer.natvis" />
+  </ItemGroup>
 </Project>
