--- a/TicTacToeMachineLearning.vcxproj.filters
+++ b/TicTacToeMachineLearning.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="include\UltimateTTT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="Eigen_visualizer.natvis" />
